// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`frame trigger — parameterised API call sequences > trigger account.created makes the expected API call sequence 1`] = `
[
  "POST /accounts",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger account.restricted makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /test/force_transition",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger account.unrestricted makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /test/force_transition",
  "POST /test/force_transition",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger account.updated makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "PATCH /accounts/mock_id_1",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger capability.approved makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /capabilities",
  "POST /test/force_transition",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger capability.denied makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /capabilities",
  "POST /test/force_transition",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger capability.disabled makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /capabilities",
  "POST /test/force_transition",
  "POST /test/force_transition",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger capability.requested makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /capabilities",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger invoice.created makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /invoices",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger invoice.paid makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /invoices",
  "POST /test/force_transition",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger refund.completed makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /transfers",
  "POST /test/force_transition",
  "POST /refunds",
  "POST /test/force_transition",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger refund.created makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /transfers",
  "POST /test/force_transition",
  "POST /refunds",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger transfer.cancelled makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /transfers",
  "POST /test/force_transition",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger transfer.completed makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /transfers",
  "POST /test/force_transition",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger transfer.created makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /transfers",
]
`;

exports[`frame trigger — parameterised API call sequences > trigger transfer.updated makes the expected API call sequence 1`] = `
[
  "POST /accounts",
  "POST /transfers",
  "PATCH /transfers/mock_id_2",
]
`;
